Fix view on small devices

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -52,11 +52,6 @@ a {
 .carousel a {
   margin: 0 auto;
 }
-@media (max-width: 900px) {
-  .carousel-caption h2 {
-    font-size: 2.5vw;
-  }
-}
 
 .homepage-video {
   display: flex;
@@ -95,9 +90,22 @@ a {
   text-align: center;
 }
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 820px) {
   .homepage-video,
   .text-over-video {
     display: none;
+  }
+}
+
+@media only screen and (max-width: 1060px) {
+  .food-title,
+  .food-subtitle {
+    font-size: 5vw;
+  }
+}
+
+@media (max-width: 900px) {
+  .carousel-caption h2 {
+    font-size: 2.5vw;
   }
 }
